# perfomance_test

./: CMakeLists.txt  common.h  key.txt  keystore.jks  main.cpp  main.h
android/: build.gradle  keystore.jks  settings.gradle
android/app/: AndroidManifest.xml  build.gradle
android/app/release/: output-metadata.json
android/app/res/layout/: activity_main.xml  cpu_info_item.xml  fragment_cpu_info.xml  fragment_result_scores.xml  fragment_run_tests.xml  fragment_run_tests_and_results.xml
android/app/res/navigation/: nav_graph.xml
android/app/res/values/: colors.xml  strings.xml  themes.xml
android/app/res/values-night/: themes.xml
android/app/src/com/example/perfomance_test/: MainActivity.kt
android/app/src/com/example/perfomance_test/ui/main/: RunTestsAndResultsFragment.kt  SectionsPagerAdapter.kt
android/app/src/com/example/perfomance_test/ui/main/cpuinfo/: CpuInfoAdapter.kt  CpuInfoFragment.kt  CpuInfoItemData.kt  CpuInfoItemHolder.kt
android/app/src/com/example/perfomance_test/ui/main/score/: AlgorithmResultAdapter.kt  AlgorithmResultHolder.kt  AlgotithmResultBlockData.kt  ResultScoresFragment.kt  TestCaseResultData.kt
android/app/src/com/example/perfomance_test/ui/main/testing/: RunTestsFragment.kt  TestCasesAndAlgorithmsData.kt
android/app/src/main/res/layout/: algorithm_result_item.xml
android/gradle/wrapper/: gradle-wrapper.properties
resources/: test_cases.json
source/: InstructionSet.h  algorithms.cpp  algorithms.h  arch_detect.h  constants.h  datatypes.cpp  datatypes.h  image.cpp  image.h  merging_test.cpp  merging_test.h  simd_helpers.cpp  simd_helpers.h  utility.h
